tests/NormalTests/paczka1/small_fuzzy/87369328.err
Error in line 4: S638 S624 90,0
Error in line 6: S638 S933 25,8
Error in line 9: BMMWJ82O7yI S933 91,0
